# programering_inom-data_plattform_projekt

./: .gitignore  README.md  pyproject.toml
app/: dashboard.py  main.py
cleaners/: clean_anforanden.py  clean_kalender.py  clean_ledamoter.py  clean_voteringar.py
consumers/: consumer.py
docker/: Dockerfile  docker-compose.yml
notebooks/: riksdagen_analysis.ipynb
producers/: anforanden_producer.py  dokument_producer.py  kalender_producer.py  ledamoter_producer.py  voteringar_producer.py
scripts/: create_csv.py
services/: kafka_producer.py  riksdag_api.py
